--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
         </nav>
       
         <ul class="contact-list list">
-          <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> </li>
-          <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-mail">
+                <use href="./img/sprite.svg#icon-envelope"></use>
+              </svg> info@devstudio.com
+            </a> 
+          </li>
+          <li class="item"><a href="tel:+380961111111" class="link">
+            <svg class="icon-phone">
+              <use href="./img/sprite.svg#icon-phone"></use>
+            </svg> +38 096 111 11 11</a></li>
         </ul>
     </div>
   </header>
@@ -41,18 +50,38 @@
         <h2 class="section-title-hidden">Особенности</h2>
         <ul class="list feature-list">
             <li class="item">
+              <div class="icon-bg">
+                <svg class="icon-feature">
+                  <use href="./img/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li class="item">
+                <div class="icon-bg">
+                  <svg class="icon-feature">
+                    <use href="./img/sprite.svg#icon-clock"></use>
+                  </svg>
+                </div>
                 <h3 class="title">Пунктуальность</h3>
                 <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li class="item">
+                <div class="icon-bg">
+                  <svg class="icon-feature">
+                    <use href="./img/sprite.svg#icon-diagram"></use>
+                  </svg>
+                </div>
                 <h3 class="title">Планирование</h3>
                 <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="item">
+              <div class="icon-bg">
+                <svg class="icon-feature">
+                  <use href="./img/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -80,6 +109,36 @@
               <div class="member">
                 <h3 class="name">Игорь Демьяненко</h3>
                 <p class="text">Product Designer</p>
+                <ul class="list social-list">
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>  
             </li>
             <li class="item">
@@ -87,6 +146,36 @@
               <div class="member">
                 <h3 class="name">Ольга Репина</h3>
                 <p class="text">Frontend Developer</p>
+                <ul class="list social-list">
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>  
             </li>
             <li class="item">
@@ -94,6 +183,36 @@
               <div class="member">
                 <h3 class="name">Николай Тарасов</h3>
                 <p class="text">Marketing</p>
+                <ul class="list social-list">
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>  
             </li>
             <li class="item">
@@ -101,21 +220,139 @@
               <div class="member">
                 <h3 class="name">Михаил Ермаков</h3>
                 <p class="text">UI Designer</p>
+                <ul class="list social-list">
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>  
             </li>
+        </ul>
+      </div>
+    </section>
+<!-- Постійні клієнти -->
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="list client-list">
+          <li class="client-logo">
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="./img/sprite.svg#icon-logo1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-logo">
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="./img/sprite.svg#icon-logo2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-logo">
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="./img/sprite.svg#icon-logo3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-logo">
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="./img/sprite.svg#icon-logo4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-logo">
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="./img/sprite.svg#icon-logo5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-logo">
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="./img/sprite.svg#icon-logo6"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
       </div>
     </section>
   </main>
 <!-- Футер -->
   <footer class="footer">
-    <div class="container">
-    <a href="" class="logo">Web<span class="logo-white">Studio</span></a>
-    <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
-    <ul class="list contact">
-      <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
-    </ul>
+    <div class="container flex-footer">
+      <div class="contact-blok">
+        <a href="" class="logo">Web<span class="logo-white">Studio</span></a>
+        <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="list contact">
+          <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
+        </ul>
+      </div>
+      <div class="social-blok">
+        <h3 class="title-footer">Присоединяйтесь</h3>
+        <ul class="list footer-social">
+          <li class="item-social">
+            <a href="" class="footer-link">
+              <svg class="footer-icon">
+                <use href="./img/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item-social">
+            <a href="" class="footer-link">
+              <svg class="footer-icon">
+                <use href="./img/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item-social">
+            <a href="" class="footer-link">
+              <svg class="footer-icon">
+                <use href="./img/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item-social">
+            <a href="" class="footer-link">
+              <svg class="footer-icon">
+                <use href="./img/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          
+        </ul>
+      </div>
   </div>
   </footer>
 </body>
