--- a/portfolio.html
+++ b/portfolio.html
@@ -12,28 +12,37 @@
 </head>
 <body>
 <!-- Шапка -->
-  <header>
+<header>
     <div class="container flex-header">
-      <nav class="flex-nav">
-        <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
-        <ul class="site-nav list">
-          <li class="item"><a href="./index.html"class="link">Студия</a></li>
-          <li class="item"><a href=""class="link active">Портфолио</a></li>
-          <li class="item"><a href=""class="link">Контакты</a></li>
-        </ul>
-      </nav>
+        <nav class="flex-nav">
+          <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
+          <ul class="site-nav list">
+              <li class="item"><a href="./index.html"class="link">Студия</a></li>
+              <li class="item"><a href=""class="link active">Портфолио</a></li>
+              <li class="item"><a href=""class="link">Контакты</a></li>
+          </ul>
+        </nav>
       
-      <ul class="contact-list list">
-        <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> </li>
-        <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+        <ul class="contact-list list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-mail">
+                <use href="./img/sprite.svg#icon-envelope"></use>
+              </svg> info@devstudio.com
+            </a> 
+          </li>
+          <li class="item"><a href="tel:+380961111111" class="link">
+            <svg class="icon-phone">
+              <use href="./img/sprite.svg#icon-phone"></use>
+            </svg> +38 096 111 11 11</a></li>
+        </ul>
     </div>
   </header>
   <main>
 <!-- Роботи -->
     <section class="section">
       <div class="container">
-        <h1>Наши работы</h1>
+        <h1 class="section-title-hidden">Наши работы</h1>
         <ul class="list menu-list">
             <li class="item"><button type="button" class="button">Все</button></li>
             <li class="item"><button type="button" class="button">Веб-сайты</button></li>
@@ -110,8 +119,9 @@
     </section>
   </main>
     <!-- Футер -->
-    <footer class="footer">
-        <div class="container">
+  <footer class="footer">
+    <div class="container flex-footer">
+      <div class="contact-blok">
         <a href="" class="logo">Web<span class="logo-white">Studio</span></a>
         <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="list contact">
@@ -119,6 +129,43 @@
           <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
         </ul>
       </div>
-      </footer>
+      <div class="social-blok">
+        <h3 class="title-footer">Присоединяйтесь</h3>
+        <ul class="list footer-social">
+          <li class="item-social">
+            <a href="" class="footer-link">
+              <svg class="footer-icon">
+                <use href="./img/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item-social">
+            <a href="" class="footer-link">
+              <svg class="footer-icon">
+                <use href="./img/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item-social">
+            <a href="" class="footer-link">
+              <svg class="footer-icon">
+                <use href="./img/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item-social">
+            <a href="" class="footer-link">
+              <svg class="footer-icon">
+                <use href="./img/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          
+        </ul>
+      </div>
+  </div>
+  </footer>
 </body>
 </html>
